--- a/frontend/src/routes/AssistancePage.module.css
+++ b/frontend/src/routes/AssistancePage.module.css
@@ -29,3 +29,16 @@
     width: 90%;
     font-size: 20px;
 }
+
+.busyClinicianView {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+}
+
+.busyClinicianContent {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
