--- a/frontend/src/routes/CounterpartPage.module.css
+++ b/frontend/src/routes/CounterpartPage.module.css
@@ -17,3 +17,25 @@
     text-align: center;
     font-size: 20px;
 }
+
+.busyClinicianView,
+.busyPatientView {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    padding: 32px 0;
+}
+
+.counterpartDataContainer {
+    display: flex;
+    flex-direction: column;
+    gap: inherit;
+}
+
+.counterpartDataRow {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    margin: 0 auto;
+    width: 90%;
+}
