--- a/frontend/src/routes/ChatPage.module.css
+++ b/frontend/src/routes/ChatPage.module.css
@@ -17,3 +17,10 @@
     text-align: center;
     font-size: 20px;
 }
+
+.busyPatientView,
+.busyClinicianView {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
