--- a/frontend/src/routes/AssistancePage.module.css
+++ b/frontend/src/routes/AssistancePage.module.css
@@ -30,14 +30,16 @@
     font-size: 20px;
 }
 
-.busyClinicianView {
+.busyClinicianView,
+.busyPatientView {
     height: 100%;
     display: flex;
     flex-direction: column;
     overflow: auto;
 }
 
-.busyClinicianContent {
+.busyClinicianContent,
+.busyPatientContent {
     display: flex;
     flex-direction: column;
     gap: 18px;
