--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,4 +1,5 @@
 @import url("../node_modules/reset-css/reset.css");
+@import "leaflet/dist/leaflet.css";
 
 *, *::after, *::before {
 	box-sizing: border-box;
